			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Avoid history expansion on ..., !.  Kimberly Voll.

  * FIXED: negative shift.  Roberto Bagnara.

  * FIXED: Possible crash in recompilation if another thread is doing
    GC.  Mike Elston.

=================================
VERSION 5.6.22 (October 17, 2006)
=================================

  * FIXED: Bug#227: meta-declaration of with_output_to/2.  Holger
    Kanwischer.

  * FIXED: Bug#223: Read of large non-decimal negative numbers.  
    Marius Filip.

  * FIXED: absolute_file_name/3 to honour tests for file_type(directory)
    and demand files of other types *not* to be a directory.

  * FIXED: Support Unicode in windows open_shared_object/2, underlying
    load_foreign_library/1.  Maria Sergeeva.

  * FIXED: Support Unicode in Windows environment strings, setenv/2
    and getenv/2.  Maria Sergeeva.

  * FIXED: Bug#221: Create dynamic predicates with long UNICODE names.
    Holger Kanwischer.

================================
VERSION 5.6.21 (October 2, 2006)
================================

  * PORT: Bug#219: Bus error with gmp on linux/sparc.  Keri Harris.

  * FIXED: Bug#217: floor/1 and ceil/1 return wrong value for 1<<63.
    Marius Filip.

  * ADDED: call/7-11 as predicates.  Paulo Moura.

  * PORT: Bug#206: timezone trouble on FreeBSD.  With help from Matthew Condell
    and Darren Bane.

  * PORT: Bug#212: Paralel make.  Keri Harris.

  * FIXED: Bug#201: graphical tracer running out of local stack.  
    Robert Oschler.

  * FIXED: Avoid undefined pce_expansion:push_compile_operators/1 in
    Prolog stack utility.  Mike Elston.

  * MODIFIED: relative_to option of absolute_file_name/3 is considered a
    directory if the directory exists or ends in /.  Otherwise it is assumed